[package]
name = "account"
version = "0.1.1-beta1"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
description = "Provides a simple tool library for managing web3 accounts.It provides a set of APIs for account management, including account creation, account import, account export, account deletion, account balance query, account transfer, etc."
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/account"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
x25519-dalek = {version = "2.0.0", features = ["static_secrets"]}
bip32 = {version="0.5.1", features = ["alloc"]}
rand_core = {version="0.6.4",features = ["std",'getrandom']}
